# deep-genesis-mnist

./: .gitignore  Justfile  README.md  convert_images.py  convert_weights.py  model.py  predict.py  pyproject.toml  train.py  utils.py
inc/: debug.h  draw.h  engine.h  mnist.h  model.h  weights.h
src/: draw.c  main.c  model.c
src/boot/: rom_head.c
