[project]
name = "sgdk-mnist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.3",
    "pillow>=11.3.0",
    "numpy>=2.3.3",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=7.0.0",
]
